# locally-uncensored

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  readme.txt  setup.bat  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: discord-announce.yml  release.yml
docs/: index.html  llms.txt  sitemap.xml
docs/blog/: abliterated-models-guide.html  best-local-ai-apps-2026.html  codex-cli-universal-model-support.html  how-to-run-qwen-3-6-locally.html  index.html  locally-uncensored-v2-3-1-release.html  locally-uncensored-v2-4-0-release.html  locally-uncensored-vs-gpt4all.html  locally-uncensored-vs-jan.html  locally-uncensored-vs-koboldcpp.html  locally-uncensored-vs-lm-studio.html  locally-uncensored-vs-msty.html  locally-uncensored-vs-open-webui.html  locally-uncensored-vs-sillytavern.html  run-uncensored-ai-locally.html
docs/discord/: index.html
landing-page/: index.html
marketing/: newsletter-pitches.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: agent.rs  download.rs  filesystem.rs  mod.rs  process.rs  remote.rs  shell.rs  system.rs  whisper.rs
src/api/: agents.ts  backend.ts  comfyui.ts  discover.ts  hermes-tool-calling.ts  ollama.ts  rag.ts
src/hooks/: useABCompare.ts  useAgentChat.ts  useBenchmark.ts  useChat.ts  useCodex.ts  useCreate.ts  useRAG.ts
src/lib/: chat-export.ts  constants.ts  model-compatibility.ts  ollama-errors.ts  ragDB.ts  tool-call-repair.ts  tool-selection.ts
src/stores/: agentModeStore.ts  (+5 more)
(+50 files in other folders)
